--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,9 @@
-.footer p {
-  font-size: 1rem;
-  line-height: 1.47692rem;
-  margin-bottom: 0.61538rem;
-  margin-top: 0.61538rem;
-  text-align: center;
+.footer {
+  & p {
+    font-size: 1rem;
+    line-height: 1.47692rem;
+    margin-bottom: 0.61538rem;
+    margin-top: 0.61538rem;
+    text-align: center;
+  }
 }
