--- a/features/pages/HomePage/HomePage.module.css
+++ b/features/pages/HomePage/HomePage.module.css
@@ -7,6 +7,15 @@
   align-items: center;
 }
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .main {
   padding: 5rem 0;
   flex: 1;
@@ -14,36 +23,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
 }
 
 .title {
@@ -55,6 +34,10 @@
 .title,
 .description {
   text-align: center;
+  opacity: 0;
+  animation-duration: 2s;
+  animation-name: fadeIn;
+  animation-fill-mode: forwards;
 }
 
 .description {
@@ -78,30 +61,39 @@
   flex-wrap: wrap;
   max-width: 800px;
   margin-top: 3rem;
+  opacity: 0;
+  animation-duration: 2s;
+  animation-name: fadeIn;
+  animation-fill-mode: forwards;
+  animation-delay: 1s;
 }
 
 .card {
   margin: 1rem;
   flex-basis: 45%;
   padding: 1.5rem;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  /* border: 1px solid #eaeaea; */
+  box-shadow: 0 0 1px 1px #ddd;
+  /* background: linear-gradient(to bottom, #111 5%, #000000 100%); */
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition: color 0.4s ease, box-shadow 0.4s ease;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: yellow;
+  box-shadow: 0 0 1px 1px yellow;
+  background: #000;
 }
 
 .card h3 {
-  margin: 0 0 1rem 0;
+  margin: 0;
   font-size: 1.5rem;
+  /* white-space: nowrap; */
 }
 
 .card p {
