--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
+@import-normalize;
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: var(--color-black);
+  color: var(--color-light);
+}
+
+* {
+  box-sizing: border-box;
 }
 
 a {
@@ -11,6 +19,3 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
