--- a/features/home/HomePage/HomePage.module.css
+++ b/features/home/HomePage/HomePage.module.css
@@ -1,114 +1,49 @@
-.container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+.root {
+  @apply flex
+    flex-col
+    justify-center
+    items-center
+    min-h-screen
+    px-4;
 }
 
 .title,
 .description {
-  text-align: center;
-  opacity: 0;
-  animation-duration: 2s;
-  animation-name: fadeIn;
-  animation-fill-mode: forwards;
+  @apply opacity-0
+    duration-200
+    animate-fade-in;
 }
 
 .description {
-  line-height: 1.5;
-  font-size: 1.5rem;
+  @apply text-2xl mt-2;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-  opacity: 0;
-  animation-duration: 2s;
-  animation-name: fadeIn;
-  animation-fill-mode: forwards;
+.card-grid {
+  @apply flex
+    flex-wrap
+    items-center
+    justify-center
+    gap-8
+    mt-12
+    opacity-0
+    animate-fade-in;
   animation-delay: 1s;
 }
 
 .card {
-  margin: 1rem;
   flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: center;
-  color: inherit;
-  text-decoration: none;
-  /* border: 1px solid #eaeaea; */
-  box-shadow: 0 0 1px 1px #ddd;
-  /* background: linear-gradient(to bottom, #111 5%, #000000 100%); */
-  border-radius: 10px;
-  transition: color 0.4s ease, box-shadow 0.4s ease;
+  @apply text-center text-2xl;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: yellow;
-  box-shadow: 0 0 1px 1px yellow;
-  background: #000;
+.card-title {
+  @apply font-normal;
 }
 
-.card h3 {
-  margin: 0;
-  font-size: 1.5rem;
-  /* white-space: nowrap; */
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
+@keyframes fadeIn {
+  0% {
+    @apply opacity-0;
+  }
+  100% {
+    @apply opacity-100;
   }
 }
