--- a/features/blog/PostsIndex/PostsIndex.module.css
+++ b/features/blog/PostsIndex/PostsIndex.module.css
@@ -1,7 +1,9 @@
-.root {
-  @apply flex flex-col gap-8 mt-10;
-}
+@layer components {
+  .root {
+    @apply flex flex-col gap-8 mt-10;
+  }
 
-.card {
-  @apply text-left gap-3;
+  .card {
+    @apply text-left gap-3;
+  }
 }
