--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,18 +1,5 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-  @font-face {
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    font-weight: 400;
-  }
-
-  html {
-    @apply text-gray-900;
-  }
-}
+@tailwind screens;
 
 @layer components {
   /* add custom components here, eg
