--- a/styles/prism-overrides.css
+++ b/styles/prism-overrides.css
@@ -2,5 +2,5 @@
 
 pre[class*='language-'],
 code[class*='language-'] {
-  @apply text-base sm:text-base !important;
+  @apply text-xs sm:text-base !important;
 }
