--- a/features/layout/ImageGallery/ImageGallery.module.css
+++ b/features/layout/ImageGallery/ImageGallery.module.css
@@ -9,16 +9,10 @@
 }
 
 .item {
-  @apply shadow-xl
-    rounded-xl
-    border
-    border-gray-800
+  @apply rounded-xl
     overflow-hidden;
-    line-height: 0;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.12),
-    0 2px 2px rgba(0,0,0,0.12),
-    0 4px 4px rgba(0,0,0,0.12),
-    0 8px 8px rgba(0,0,0,0.12),
-    0 16px 16px rgba(0,0,0,0.12);
-
+  line-height: 0;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12),
+    0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12),
+    0 16px 16px rgba(0, 0, 0, 0.12);
 }
