--- a/features/layout/ImageGallery/ImageGallery.module.css
+++ b/features/layout/ImageGallery/ImageGallery.module.css
@@ -2,14 +2,14 @@
   @apply flex
     flex-wrap
     justify-center
-    pt-10
-    sm:pt-20
-    gap-10
-    sm:gap-20;
+    pt-5
+    sm:pt-10;
 }
 
 .item {
   @apply rounded-xl
+    m-5
+    sm:m-10
     overflow-hidden;
   line-height: 0;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12),
