Add image component and new blog entries

--- a/features/blog/BlogPostCard/BlogPostCard.module.css
+++ b/features/blog/BlogPostCard/BlogPostCard.module.css
@@ -1,5 +1,7 @@
 @layer components {
   .date {
-    @apply text-gray-500 text-sm;
+    @apply text-gray-500
+      text-sm
+      leading-loose;
   }
 }
