--- a/features/layout/Card/Card.module.css
+++ b/features/layout/Card/Card.module.css
@@ -6,8 +6,10 @@
       justify-center
       self-stretch;
   }
-
-  .card > * {
+  .title {
+    @apply mb-1;
+  }
+  .content {
     @apply my-1;
   }
 }
