--- a/features/layout/Link/Link.module.css
+++ b/features/layout/Link/Link.module.css
@@ -1,3 +1,5 @@
-.variant-button {
-  composes: root from '../Button/Button.module.css';
+@layer components {
+  .variant-button {
+    composes: root from '../Button/Button.module.css';
+  }
 }
