--- a/features/layout/Modal/Dialog.module.css
+++ b/features/layout/Modal/Dialog.module.css
@@ -1,65 +1,67 @@
-.root {
-  @apply flex
-    flex-col
-    bg-white
-    rounded-lg
-    text-left
-    overflow-hidden
-    shadow-xl
-    transform
-    transition-all
-    sm:align-middle
-    sm:max-w-6xl
-    sm:max-h-full
-    mx-auto
-    my-10;
-}
+@layer components {
+  .root {
+    @apply flex
+      flex-col
+      bg-white
+      rounded-lg
+      text-left
+      overflow-hidden
+      shadow-xl
+      transform
+      transition-all
+      sm:align-middle
+      sm:max-w-6xl
+      sm:max-h-full
+      mx-auto
+      my-10;
+  }
 
-.header {
-  @apply absolute
-    z-10
-    right-2
-    top-4
-    px-4
-    py-3
-    sm:px-6
-    sm:flex
-    sm:flex-row-reverse;
-}
+  .header {
+    @apply absolute
+      z-10
+      right-2
+      top-4
+      px-4
+      py-3
+      sm:px-6
+      sm:flex
+      sm:flex-row-reverse;
+  }
 
-.close-button {
-  @apply mt-3
-    w-full
-    inline-flex
-    justify-center
-    rounded-md
-    border
-    border-gray-300
-    shadow-sm
-    px-4
-    py-2
-    bg-white
-    text-base
-    font-medium
-    text-gray-700
-    hover:bg-gray-50
-    focus:outline-none
-    focus:ring-2
-    focus:ring-offset-2
-    focus:ring-indigo-500
-    sm:mt-0
-    sm:ml-3
-    sm:w-auto
-    sm:text-sm;
-}
+  .close-button {
+    @apply mt-3
+      w-full
+      inline-flex
+      justify-center
+      rounded-md
+      border
+      border-gray-300
+      shadow-sm
+      px-4
+      py-2
+      bg-white
+      text-base
+      font-medium
+      text-gray-700
+      hover:bg-gray-50
+      focus:outline-none
+      focus:ring-2
+      focus:ring-offset-2
+      focus:ring-indigo-500
+      sm:mt-0
+      sm:ml-3
+      sm:w-auto
+      sm:text-sm;
+  }
 
-.body {
-  @apply bg-white
-    mx-4
-    mt-5
-    mb-4
-    sm:m-6
-    overflow-hidden
-    relative
-    h-full;
+  .body {
+    @apply bg-white
+      mx-4
+      mt-5
+      mb-4
+      sm:m-6
+      overflow-hidden
+      relative
+      h-full;
+  }
 }
