--- a/features/layout/Modal/Modal.module.css
+++ b/features/layout/Modal/Modal.module.css
@@ -1,10 +1,12 @@
-.root {
-  @apply fixed
-    z-10
-    inset-0
-    overflow-y-auto;
-}
+@layer components {
+  .root {
+    @apply fixed
+      z-10
+      inset-0
+      overflow-y-auto;
+  }
 
-.no-scroll {
-  @apply overflow-hidden;
+  .no-scroll {
+    @apply overflow-hidden;
+  }
 }
