--- a/src/features/layout/Link/Link.module.css
+++ b/src/features/layout/Link/Link.module.css
@@ -1,3 +1,8 @@
-.variant-button {
-  composes: root from '../Button/Button.module.css';
+.variant-card-button {
+  composes: variant-card from '../Button/Button.module.css';
+}
+
+.variant-normal {
+  @apply underline
+    font-medium;
 }
