Hook up post comment form

--- a/src/features/blog/AddCommentForm/AddCommentForm.module.css
+++ b/src/features/blog/AddCommentForm/AddCommentForm.module.css
@@ -2,48 +2,28 @@
   @apply mt-8;
 }
 
-.textarea-container {
-  @apply w-full
-    md:w-full
-    mb-3
-    mt-2;
-}
-
-.textarea {
-  @apply block
-    bg-gray-50
-    rounded
-    border
-    border-gray-200
-    leading-normal
-    w-full
-    h-20
-    py-2
-    px-3
-    resize-y
-    placeholder-gray-400
-    focus:outline-none
-    focus:bg-white;
-}
-
-.submit-container {
+.footer {
   @apply flex
     items-start
     justify-between;
 }
 
 .heading {
-  @apply pt-3
-    pb-2
-    text-gray-800
+  @apply text-gray-800
     font-medium
     text-lg;
+}
+
+.name-field {
+  @apply w-full
+    sm:w-3/4
+    md:w-1/2;
 }
 
 .info-container {
   @apply flex
     items-center
-    text-gray-700
+    text-gray-700;
 }
 
 .info-icon {
@@ -63,7 +43,8 @@
 }
 
 .button {
-  @apply mx-1 transition-opacity duration-200 ease-out;
+  @apply mx-1;
+  transition-property: box-shadow, border-color, opacity;
 }
 
 .button:last-child {
@@ -80,4 +61,8 @@
 
 .sr-hidden {
   @apply hidden;
+}
+
+.alert {
+  @apply justify-center;
 }
