--- a/src/features/layout/Label/Label.module.css
+++ b/src/features/layout/Label/Label.module.css
@@ -1,3 +1,8 @@
 .sr-hidden {
-  @apply hidden;
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
 }
