--- a/src/features/projects/ProjectsIndex/ProjectsIndex.module.css
+++ b/src/features/projects/ProjectsIndex/ProjectsIndex.module.css
@@ -12,3 +12,11 @@
 .tags {
   @apply text-gray-500;
 }
+
+.title {
+  @apply flex items-center;
+}
+
+.icon {
+  @apply mr-2 sm:mr-4 text-xl sm:text-3xl;
+}
