Image lightbox improvements

--- a/src/features/layout/Label/Label.module.css
+++ b/src/features/layout/Label/Label.module.css
@@ -1,8 +1,3 @@
-.sr-hidden {
-  position: absolute;
-  left: -10000px;
-  top: auto;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
+.hidden {
+  composes: sr-hidden from '../../../styles/helpers.module.css';
 }
