More image lightbox improvements

--- a/src/features/layout/Modal/Dialog.module.css
+++ b/src/features/layout/Modal/Dialog.module.css
@@ -2,19 +2,18 @@
   @apply flex
     flex-col
     text-left
-    overflow-hidden
     border
     border-gray-700
     shadow-xl
-    sm:align-middle
-    sm:max-w-full
-    sm:max-h-full
-    mx-auto
-    my-10;
+    relative
+    /* sm:align-middle */
+    /* sm:max-w-full */
+    /* sm:max-h-full */
+    m-4;
 }
 
-.header {
-  @apply absolute
+/* .header {
+  @apply fixed
     z-10
     right-2
     top-4
@@ -23,35 +22,19 @@
     sm:px-6
     sm:flex
     sm:flex-row-reverse;
-}
+} */
 
 .close-button {
-  @apply mt-3
-    w-full
-    inline-flex
-    justify-center
-    rounded-md
-    border
-    border-gray-300
-    shadow-sm
-    px-4
-    py-2
-    text-base
-    font-medium
-    text-gray-700
-    hover:bg-gray-50
-    focus:outline-none
-    focus:ring-2
-    focus:ring-offset-2
-    focus:ring-indigo-500
-    sm:mt-0
-    sm:ml-3
-    sm:w-auto
-    sm:text-sm;
+  @apply fixed
+    top-6
+    right-8;
+
 }
 
 .body {
   @apply overflow-hidden
     relative
-    h-full;
+    h-full
+    flex
+    items-center;
 }
