--- a/src/features/layout/ImageGallery/ImageGallery.module.css
+++ b/src/features/layout/ImageGallery/ImageGallery.module.css
@@ -9,9 +9,27 @@
 .item {
   @apply m-5
     sm:m-10
+    rounded-2xl
     overflow-hidden;
   line-height: 0;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 2px 2px rgba(0, 0, 0, 0.12),
     0 4px 4px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.12),
     0 16px 16px rgba(0, 0, 0, 0.12);
+}
+
+.arrow {
+  @apply fixed
+    z-50
+    top-2/4
+    text-white;
+}
+
+.arrow-left {
+  composes: arrow;
+  @apply left-8;
+}
+
+.arrow-right {
+  composes: arrow;
+  @apply right-8;
 }
